:hammer: fix: fixed a little facebook feed but does not work on mobiles

--- a/src/components/Feed/style.scss
+++ b/src/components/Feed/style.scss
@@ -23,15 +23,21 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
+    width: 100%;
     @media (min-width: vars.$mobile) {
+     
       align-items: center;
     }
   }
 
   &__iframe {
-    height: 700px;
     width: 100%;
+    height: 700px;
     border:none;
     overflow:hidden;
+    @media (min-width: vars.$mobile) {
+      width: 0;
+    }
+    
   }
 }
